--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,8 @@ jobs:
           cache: npm
 
       - name: Install deps
-        run: npm ci
+        run: |
+            if [ -f package-lock.json ]; then npm ci; else npm install; fi
 
       - name: Auth to Google Cloud
         uses: google-github-actions/auth@v2
