--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install deps
         run: |
-            if [ -f package-lock.json ]; then npm ci; else npm install; fi
+            npm install
 
       - name: Auth to Google Cloud
         uses: google-github-actions/auth@v2
