--- a/.github/workflows/dialogflowimport.yml
+++ b/.github/workflows/dialogflowimport.yml
@@ -13,7 +13,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install gcloud beta
-        run: gcloud components install beta --quiet
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-cloud-cli-beta
 
       - name: Set up gcloud
         uses: google-github-actions/setup-gcloud@v2
