--- a/.github/workflows/dialogflowimport.yml
+++ b/.github/workflows/dialogflowimport.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Import Dialogflow CX Agent
         run: |
-          gcloud beta dialogflow cx agents import \
+          gcloud dialogflow cx agents import \
             --agent=projects/${{ secrets.GOOGLE_FUNCTIONS_PROJECT_ID }}/locations/${{ secrets.GCP_AGENT_REGION }}/agents/3bbd52b8-6446-4dc1-915c-ad084a5b192b \
             --source=/ \
             --quiet
