--- a/.github/workflows/dialogflowimport.yml
+++ b/.github/workflows/dialogflowimport.yml
@@ -26,7 +26,7 @@ jobs:
           
       - name: Import Dialogflow CX Agent
         run: |
-          gcloud alpha dialogflow agent import \
+          gcloud alpha dialogflow agent restore \
             --agent=projects/${{ secrets.GOOGLE_FUNCTIONS_PROJECT_ID }}/locations/${{ secrets.GCP_AGENT_REGION }}/agents/3bbd52b8-6446-4dc1-915c-ad084a5b192b \
-            --source="./agent.zip" \
+            --agent-content-path="./agent.zip" \
             --quiet
