--- a/.github/workflows/dialogflowimport.yml
+++ b/.github/workflows/dialogflowimport.yml
@@ -23,7 +23,7 @@ jobs:
           install_components: alpha
           
       - name: Install zip
-        run: sudo apt-get update && sudo apt-get install -y zip unzip
+        run: apt-get update && apt-get install -y zip unzip
         
       - name: Create agent.zip
         run: |
