--- a/.github/workflows/dialogflowimport.yml
+++ b/.github/workflows/dialogflowimport.yml
@@ -11,7 +11,10 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
-
+        
+      - name: Install Dialogflow CX component
+        run: gcloud components install beta --quiet && gcloud components install alpha --quiet
+        
       - name: Set up gcloud
         uses: google-github-actions/setup-gcloud@v2
         with:
