--- a/.github/workflows/dialogflowimport.yml
+++ b/.github/workflows/dialogflowimport.yml
@@ -18,12 +18,15 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
+          
       - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y zip unzip curl
-          curl -sSL https://raw.githubusercontent.com/googleapis/cxcli/main/install.sh | bash
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
+          curl -L https://github.com/GoogleCloudPlatform/dialogflow-cx-cli/releases/latest/download/cxcli_Linux_x86_64.tar.gz -o cxcli.tar.gz
+          tar -xzf cxcli.tar.gz
+          sudo mv cxcli /usr/local/bin/
+          cxcli --version
         
       - name: Zip Dialogflow CX agent
         run: |
