--- a/.github/workflows/dialogflowimport.yml
+++ b/.github/workflows/dialogflowimport.yml
@@ -23,8 +23,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y zip unzip curl
-          curl -L https://github.com/GoogleCloudPlatform/dialogflow-cx-cli/releases/latest/download/cxcli_Linux_x86_64.tar.gz -o cxcli.tar.gz
-          tar -xzf cxcli.tar.gz
+          curl -L https://github.com/GoogleCloudPlatform/dialogflow-cx-cli/releases/latest/download/cxcli_Linux_x86_64.tar.gz | tar -xz
           sudo mv cxcli /usr/local/bin/
           cxcli --version
         
