--- a/.github/workflows/dialogflowimport.yml
+++ b/.github/workflows/dialogflowimport.yml
@@ -19,11 +19,13 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
           
-      - name: Install dependencies
+      - name: Install tools + cxcli
         run: |
-          sudo apt-get update
+          sudo apt-get update -y
           sudo apt-get install -y zip unzip curl
-          curl -L https://github.com/GoogleCloudPlatform/dialogflow-cx-cli/releases/latest/download/cxcli_Linux_x86_64.tar.gz | tar -xz
+          CXCLI_URL="https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-cli-linux-x86_64.tar.gz"
+          curl -L -o cxcli.tar.gz "$CXCLI_URL"
+          tar -xzf cxcli.tar.gz
           sudo mv cxcli /usr/local/bin/
           cxcli --version
         
