--- a/.github/workflows/dialogflowimport.yml
+++ b/.github/workflows/dialogflowimport.yml
@@ -21,27 +21,10 @@ jobs:
           
       - name: Install tools + cxcli
         run: |
-          set -e
-          sudo apt-get update -y
-          sudo apt-get install -y zip unzip curl
-          CXCLI_URL="https://github.com/xavidop/dialogflow-cx-cli/releases/download/v1.239.0/cxcli_Linux_x86_64.tar.gz"
-          curl -L -o cxcli.tar.gz "$CXCLI_URL"
-          mkdir cxcli_unpack
-          tar -xzf cxcli.tar.gz -C cxcli_unpack
-          echo "Archive contents:"
-          find cxcli_unpack -maxdepth 3 -type f -size +0c -printf '%P\n'
-          # Find the binary named 'cxcli'
-          CXCLI_PATH=$(find cxcli_unpack -type f -name cxcli -perm -u+x | head -n1)
-          if [ -z "$CXCLI_PATH" ]; then
-            # Try making a candidate executable if present
-            CANDIDATE=$(find cxcli_unpack -type f -name cxcli | head -n1)
-            [ -n "$CANDIDATE" ] && chmod +x "$CANDIDATE" && CXCLI_PATH="$CANDIDATE"
-          fi
-          if [ -z "$CXCLI_PATH" ]; then
-            echo "cxcli binary not found in archive"; exit 1
-          fi
-          sudo install -m 755 "$CXCLI_PATH" /usr/local/bin/cxcli
-          cxcli --version
+          curl -L -o cxcli.tar.gz "https://github.com/xavidop/dialogflow-cx-cli/releases/download/v1.239.0/cxcli_Linux_x86_64.tar.gz"
+          tar -xzf cxcli.tar.gz
+          sudo mv cxcli /usr/local/bin/
+          cxcli version
         
       - name: Zip Dialogflow CX agent
         run: |
