--- a/.github/workflows/dialogflowimport.yml
+++ b/.github/workflows/dialogflowimport.yml
@@ -36,8 +36,10 @@ jobs:
 
       - name: Set up GCP credentials
         run: |
-          echo "${{ secrets.GCP_SA_KEY }}" > gcp-key.json
-          export GOOGLE_APPLICATION_CREDENTIALS="gcp-key.json"
+          # Write the secret to a JSON file safely
+          echo "${{ secrets.GCP_SA_KEY }}" | tr -d '\r' > gcp-key.json
+          # Set the environment variable for authentication
+          echo "GOOGLE_APPLICATION_CREDENTIALS=$(pwd)/gcp-key.json" >> $GITHUB_ENV
     
       - name: Restore CX Agent with cxcli
         env:
