--- a/.github/workflows/dialogflowimport.yml
+++ b/.github/workflows/dialogflowimport.yml
@@ -39,16 +39,21 @@ jobs:
       - name: Verify blob
         run: |
           test -f agent.blob || (echo "agent.blob not created"; exit 1)
-
+          
+      - name: Set up GCP credentials
+        run: |
+          echo "${{ secrets.GCP_SA_KEY }}" > gcp-key.json
+        shell: bash
       
       - name: Restore CX Agent with cxcli
         env:
           PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
           LOCATION_ID: ${{ secrets.GCP_AGENT_REGION }}
           AGENT_ID: ${{ secrets.GCP_AGENT_ID }}
-  
+          
         run: |
           cxcli agent restore "3bbd52b8-6446-4dc1-915c-ad084a5b192b" \
             --project-id "roger-470808" \
             --location-id "us-central1" \
             --input agent.blob
+            --credentials gcp-key.json
