--- a/.github/workflows/dialogflowimport.yml
+++ b/.github/workflows/dialogflowimport.yml
@@ -53,4 +53,7 @@ jobs:
           
         run: |
           cxcli agent restore "3bbd52b8-6446-4dc1-915c-ad084a5b192b" \
+            --project-id "roger-470808" \
+            --location-id "us-central1" \
+            --input agent.blob
             --credentials gcp-key.json
